tests/negative/MicroJuvix/TooManyPatterns.mjuvix
module TooManyPatterns;
  inductive A {
    a : A;
  };

  f : A -> A;
  f a _ ≔ a;
end;
